--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "metalsmith-basename",
-  "version": "0.2.1",
-  "description": "Add collection filenames without extention into metadata",
-  "main": "lib.js",
+  "version": "0.2.2",
+  "description": "Add basename of the file into metadata",
+  "main": "lib/index.js",
   "scripts": {
     "test": "node_modules/jasmine/bin/jasmine.js"
   },
@@ -18,6 +18,8 @@
     "multimatch": "^2.0.0"
   },
   "devDependencies": {
-    "jasmine": "^2.3.2"
+    "harmonize": "^1.4.4",
+    "jasmine": "^2.3.2",
+    "metalsmith": "^2.0.1"
   }
 }
